--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.3"
+    "react-hook-form": "^7.49.3",
+    "react-intersection-observer": "^9.5.3",
+    "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
