--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-intersection-observer": "^9.5.3",
+    "react-markdown": "^9.0.1",
     "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
