--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.6.5",
     "next": "14.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "nodemailer": "^6.9.8",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
