--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.49.3",
     "react-intersection-observer": "^9.5.3",
     "react-markdown": "^9.0.1",
+    "sharp": "^0.33.2",
     "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
